--- a/ML-NVIDIA.ipynb
+++ b/ML-NVIDIA.ipynb
@@ -4,7 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Machine Learning & Tech Stocks: NVIDIA"
+    "# Machine Learning & Tech Stocks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NVDA Historical Data: https://finance.yahoo.com/quote/NVDA/history?p=NVDA\n",
+    "\n",
+    "MSFT Historical Data: https://finance.yahoo.com/quote/MSFT/history?p=MSFT\n",
+    "\n",
+    "ASML Historical Data: https://finance.yahoo.com/quote/ASML/history?p=ASML\n",
+    "\n",
+    "APPL Historical Data: https://finance.yahoo.com/quote/AAPL/history?p=AAPL"
    ]
   },
   {
@@ -16,6 +29,13 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NVIDIA Stock Price Prediction"
    ]
   },
   {
@@ -163,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Normalization\n",
+    "### Data Normalization\n",
     "We normalize the data by changing the values of numeric columns in the dataset to a common scale, which helps the performance of the model. Then to scale the training dataset, use Scikit-Learn’s MinMaxScaler with numbers between zero and one."
    ]
   },
@@ -183,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Incorporating Timesteps Into Data\n",
+    "### Incorporating Timesteps Into Data\n",
     "Input our data in the form of a 3D array to the LSTM model by first creating data in 60 timesteps before using numpy to convert it into an array, then convert the data into a 3D array with X_train samples, 60 timestamps, and one feature at each step.\n"
    ]
   },
@@ -210,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating the LSTM Model"
+    "### LSTM Model"
    ]
   },
   {
@@ -489,7 +509,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Making Predictions from the Test Set\n",
+    "### Making Predictions from the Test Set\n",
     "\n",
     "Before predicting future stock prices, modify the test set (notice similarities to the edits made to the training set): merge the training set and the test set on the 0 axis, set 60 as the time step again, use MinMaxScaler, and reshape data. Then, inverse_transform puts the stock prices in a normal readable format."
    ]
@@ -558,7 +578,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plotting the Results\n",
+    "### Plotting the Results\n",
     "Use matplotlib to visualize the result of the predicted stock price and the actual stock price."
    ]
   },
