Update and rename ML-NVIDIA.ipynb to NVDA-ML-LSTM.ipynb

--- a/NVDA-ML-LSTM.ipynb
+++ b/NVDA-ML-LSTM.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Machine Learning & Tech Stocks"
+    "# NVDA Stock Price Prediction with Machine Learning: LSTM"
    ]
   },
   {
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "# Importing the training set\n",
-    "url = '~/wd/GitHub/TechStocks/training_set.csv'\n",
+    "url = '~/wd/GitHub/Stocks/NVDA-training_set.csv'\n",
     "dataset_train = pd.read_csv(url)\n",
     "training_set = dataset_train.iloc[:, 1:2].values"
    ]
@@ -520,7 +520,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Making Predictions from the Test Set\n",
+    "### Making NVDA Stock Price Predictions from the Test Set\n",
     "\n",
     "Before predicting future stock prices, modify the test set (notice similarities to the edits made to the training set): merge the training set and the test set on the 0 axis, set 60 as the time step again, use MinMaxScaler, and reshape data. Then, inverse_transform puts the stock prices in a normal readable format."
    ]
@@ -532,7 +532,7 @@
    "outputs": [],
    "source": [
     "# Import the test set\n",
-    "url = '~/wd/GitHub/TechStocks/test_set.csv'\n",
+    "url = '~/wd/GitHub/Stocks/NVDA-test_set.csv'\n",
     "dataset_test = pd.read_csv(url)\n",
     "real_stock_price = dataset_test.iloc[:, 1:2].values"
    ]
