--- a/Correlated_Stocks.ipynb
+++ b/Correlated_Stocks.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Correlated Bundle of Tech Stocks"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -890,7 +897,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Correlation Heatmaps"
+    "## Correlation Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Correlation Heatmap"
    ]
   },
   {
@@ -921,6 +935,13 @@
     "sns.heatmap(corr_matrix, annot=True, cmap='coolwarm', fmt='.2f', linewidths=.5)\n",
     "plt.title('Correlation Heatmap')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Correlation Matrix"
    ]
   },
   {
